# ai-sales-analyzer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  verification_manager_daily_v5_case_bundle.json  Ежедневный_отчет_Кешубаева_2026-04-06_v5.docx
core/: Dockerfile  pyproject.toml
core/app/agents/: __init__.py  base.py  registry.py
core/app/agents/calls/: __init__.py  agent.py  analyzer.py  bitrix_readonly.py  bitrix_readonly_probe.py  config.py  delivery.py  extractor.py  intake.py  manual_pilot_bootstrap.py  manual_reporting_runner.py  manual_runner.py  onlinepbx_live_probe.py  orchestrator.py  pilot_bootstrap.py  report_templates.py  reporting.py  scheduled_reporting.py  schemas.py  verification_report_runner.py
core/app/agents/calls/prompts/: agreements.md  analyze.md  classify.md  insights.md
core/app/agents/calls/report_template_assets/: active_versions.json
core/app/core_shared/: __init__.py  ai_routing.py  exceptions.py
core/app/core_shared/api/: __init__.py  main.py
core/app/core_shared/api/assets/: manual_reporting_operator.html
core/app/core_shared/api/routes/: health.py  pipeline.py  status.py
core/app/core_shared/config/: settings.py
core/app/core_shared/db/: __init__.py  base.py  models.py  session.py
core/app/core_shared/db/migrations/: alembic.ini  env.py
core/app/core_shared/scheduler/: __init__.py  cron.py
core/app/core_shared/workers/: __init__.py  celery_app.py  tasks.py
core/tests/: test_ai_provider_routing.py  test_manual_reporting.py
docs/: AI_PROVIDER_ROUTING.md  (+20 more)
(+42 files in other folders)
