[project]
name = "ai-sales-analyzer"
version = "0.1.0"
description = "AI Sales Analyzer — автоматический анализ звонков отдела продаж"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg2-binary>=2.9",
    "openai>=1.20",
    "assemblyai>=0.20",
    "httpx>=0.27",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "flower>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
